--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
+    padding-top: 70px;
 }
 
 .container {
